--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "chakra-dayzed-datepicker": "^0.2.10",
+    "date-fns": "^3.3.1",
+    "dayzed": "^3.2.3",
     "firebase": "^10.8.0",
     "firebase-admin": "^12.0.0",
     "framer-motion": "^11.0.6",
     "react": "^18.2.0",
+    "react-datepicker": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
