--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react": "^18.2.0",
     "react-datepicker": "^6.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "recharts": "^2.12.2",
