--- a/package.json
+++ b/package.json
@@ -54,5 +54,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8081"
+  "proxy": "https://port-0-barocert-lxwmkqxz2d25ae69.sel5.cloudtype.app"
 }
