--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "chakra-dayzed-datepicker": "^0.2.10",
+    "chart.js": "^4.4.3",
     "date-fns": "^3.3.1",
     "dayzed": "^3.2.3",
     "firebase": "^10.8.0",
@@ -19,6 +20,7 @@
     "framer-motion": "^11.0.6",
     "jquery": "^3.7.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-fullpage": "^0.1.19",
@@ -32,7 +34,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
