--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "firebase-admin": "^12.0.0",
     "framer-motion": "^11.0.6",
     "jquery": "^3.7.1",
+    "nodemon": "^3.1.4",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^6.2.0",
