--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "chart.js": "^4.4.3",
     "date-fns": "^3.3.1",
     "dayzed": "^3.2.3",
+    "embla-carousel-autoplay": "^8.2.1",
+    "embla-carousel-react": "^8.2.1",
     "firebase": "^10.8.0",
     "firebase-admin": "^12.0.0",
     "framer-motion": "^11.0.6",
